# ggml-rs

./: Cargo.toml  README.md  build.rs
.github/: INTRODUCTION.md  copilot-instructions.md
docs/ggml-rs/: COVERAGE_TABLE.md  ERROR_CONTEXT_POLICY.md  EXAMPLE_PARITY_MATRIX.md  KNOWLEDGE_BASE.md  README.md  SUITE_OPERATIONS.md
docs/llama-rs/: KNOWLEDGE_BASE.md  PARITY_MATRIX.md  README.md  SUBAGENT_MANDATORY_RULES.md  WORKLOG.md
docs/llama-rs/worklog/: 2026-03-13-migration-log.md  2026-03-15-migration-log.md  2026-03-18-current-state-summary.md  2026-03-18-e2e-inference-comparison.md  2026-04-12-qwen3-parity-followup.md  2026-04-13-conv-qkv-comparison.md  2026-04-14-merge-prep.md  2026-04-15-trait-extraction.md  2026-04-16-save-load-state.md  2026-04-16-simple-chat.md  2026-04-17-graph-level-projections.md  2026-04-17-view-reshape-wrappers.md  2026-04-18-graph-level-conv.md  2026-04-19-fused-projection-conv.md  2026-04-20-fully-fused-attention.md  2026-04-20-fused-attention-scoring.md  README.md
docs/llama-rs/worklog/subagents/: README.md  foundation.md  gpt2.md  gptj_magika.md  vision_mnist.md
docs/third_reviews/: review_0.md  review_1.md  review_2.md  review_3.md  review_4.md
examples/: arithmetic_expr.rs  backend_matmul.rs  backend_ops.rs  bench_matmul.rs  bench_upstream_suite.rs  gptj_main_synth.rs  gptj_quantize_synth.rs  magika_main_synth.rs  mnist_eval.rs  mnist_train.rs  perf_metal.rs  sam.rs  simple_ctx.rs  yolov3_tiny.rs
examples/backends/: backend_matmul.rs  perf_metal.rs
examples/models/: gptj_main_synth.rs  mnist_train.rs
llama-rs/: Cargo.toml
llama-rs/examples/: backend_smoke.rs  batched.rs  bench_attention_decode_cpp_compare.rs  bench_attention_layer.rs  bench_compare_report.rs  bench_matmul.rs  bench_mlp_layer.rs  e2e_generate_tokens.rs  e2e_parity_harness.rs  embedding_probe.rs  gguf.rs  gguf_hash.rs  gguf_inspect.rs  gpt2_backend.rs  gpt2_quantize.rs  idle.rs  min_infer_attention_layer.rs  min_infer_linear.rs  min_infer_mlp.rs  min_infer_mlp_layer.rs  model_catalog.rs  resolve_tensor_names.rs  simple.rs
llama-rs/examples/applications/: save_load_state.rs  simple_chat.rs
llama-rs/examples/benchmarks/: bench_attention_decode_cpp_compare.rs  bench_compare_report.rs  bench_matmul.rs
llama-rs/examples/gguf/: gguf_hash.rs  model_catalog.rs  resolve_tensor_names.rs
llama-rs/examples/inference/: e2e_parity_harness.rs
llama-rs/examples/models/: gpt2_alloc.rs  gpt2_batched.rs  gpt2_ctx.rs  gpt2_sched.rs
llama-rs/src/: backend.rs  batched.rs  bench.rs  bench_report.rs  chat.rs  e2e.rs  embedding.rs  error.rs  gguf.rs  gguf_hash.rs  gpt2_synthetic.rs  idle.rs  inference.rs  lib.rs  metadata.rs  model.rs  naming.rs  simple.rs  smoke.rs  tokenizer.rs
llama-rs/src/e2e/: attention.rs  bench_graphs.rs  checkpoint.rs  config.rs  decode.rs  error.rs  generation.rs  linear_attention.rs  mlp.rs  numeric.rs  plan.rs  planner.rs  resolve.rs  session.rs  state.rs  tensor_ops.rs
llama-rs/src/e2e/attention/: persistent.rs  projection.rs  qwen35_full.rs  shared.rs  standard.rs
llama-rs/src/e2e/bench_graphs/: helpers.rs  inference.rs  lm_head.rs  micro.rs
llama-rs/src/e2e/checkpoint/: dto.rs  runtime.rs
llama-rs/src/e2e/generation/: api.rs  loops.rs  resources.rs  strategy.rs
llama-rs/src/e2e/linear_attention/: bench.rs  conv.rs  decode.rs  projection.rs  sequence.rs  ssm.rs
llama-rs/src/e2e/session/: init.rs  runtime.rs
llama-rs/src/e2e/tensor_ops/: host_ops.rs  lm_head.rs  normalization.rs  persistent_decode.rs  projection.rs
llama-rs/src/inference/: attention_ops.rs  attention_runtime.rs  backend_runtime.rs  decode_proxy_plan.rs  layer_dimensions.rs  projection_ops.rs  stepwise_decode.rs  stepwise_plan.rs
llama-rs/tests/: attention_parity.rs  mlp_cpp_parity.rs
llama-rs/tests/cpp/: attention_decode_proxy_reference.cpp  gpt2_synthetic_reference.cpp  mlp_reference.cpp
llama-rs/tools/: llama_simple_token_ids.cpp
scripts/: agent_lock.ps1  agent_lock.rs  agent_lock.sh  fetch_model_assets.py
src/: compute.rs  error.rs  ffi.rs  ffi_manual.rs  gguf.rs  lib.rs  main.rs  num_ext.rs  shape.rs  tensor_expr.rs  typed_tensor.rs  types.rs
tests/: ggml_backend_compute.rs  ggml_error_paths.rs  ggml_graph_allocator.rs  ggml_simple_ctx.rs  ggml_tensor_nd_extended.rs  ggml_tensor_ops.rs  ggml_test_cont.rs  ggml_upstream_suite.rs  gguf_roundtrip.rs
tests/cpp/: gptj_magika_synth_ref.cpp
