[package]
name = "ggml-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
link-system = []

[lib]
name = "ggml_rs"
path = "src/lib.rs"

[[example]]
name = "simple_ctx"
path = "examples/simple_ctx.rs"
required-features = ["link-system"]

[[example]]
name = "backend_matmul"
path = "examples/backend_matmul.rs"
required-features = ["link-system"]

[[example]]
name = "arithmetic_expr"
path = "examples/arithmetic_expr.rs"
required-features = ["link-system"]

[[example]]
name = "bench_matmul"
path = "examples/bench_matmul.rs"
required-features = ["link-system"]

[[example]]
name = "bench_upstream_suite"
path = "examples/bench_upstream_suite.rs"

[dependencies]
num-traits = "0.2"
thiserror = "2"

[build-dependencies]
bindgen = "0.72.1"

[workspace]
members = ["llama-rs"]
resolver = "2"
