[package]
name = "llama-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
link-system = ["ggml-rs/link-system"]

[dependencies]
ggml-rs = { path = "..", package = "ggml-rs", default-features = false }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
uuid = { version = "1", features = ["v5"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

[[example]]
name = "backend_smoke"
path = "examples/backend_smoke.rs"
required-features = ["link-system"]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["link-system"]

[[example]]
name = "batched"
path = "examples/batched.rs"
required-features = ["link-system"]

[[example]]
name = "bench_matmul"
path = "examples/bench_matmul.rs"
required-features = ["link-system"]

[[example]]
name = "bench_mlp_layer"
path = "examples/bench_mlp_layer.rs"
required-features = ["link-system"]

[[example]]
name = "bench_attention_layer"
path = "examples/bench_attention_layer.rs"
required-features = ["link-system"]

[[example]]
name = "bench_attention_decode_cpp_compare"
path = "examples/bench_attention_decode_cpp_compare.rs"
required-features = ["link-system"]

[[example]]
name = "gguf_inspect"
path = "examples/gguf_inspect.rs"
required-features = ["link-system"]

[[example]]
name = "gguf"
path = "examples/gguf.rs"
required-features = ["link-system"]

[[example]]
name = "idle"
path = "examples/idle.rs"
required-features = ["link-system"]

[[example]]
name = "model_catalog"
path = "examples/model_catalog.rs"
required-features = ["link-system"]

[[example]]
name = "resolve_tensor_names"
path = "examples/resolve_tensor_names.rs"
required-features = ["link-system"]

[[example]]
name = "embedding_probe"
path = "examples/embedding_probe.rs"
required-features = ["link-system"]

[[example]]
name = "min_infer_linear"
path = "examples/min_infer_linear.rs"
required-features = ["link-system"]

[[example]]
name = "min_infer_mlp"
path = "examples/min_infer_mlp.rs"
required-features = ["link-system"]

[[example]]
name = "min_infer_mlp_layer"
path = "examples/min_infer_mlp_layer.rs"
required-features = ["link-system"]

[[example]]
name = "min_infer_attention_layer"
path = "examples/min_infer_attention_layer.rs"
required-features = ["link-system"]

[[example]]
name = "gguf_hash"
path = "examples/gguf_hash.rs"
required-features = ["link-system"]

[[example]]
name = "bench_compare_report"
path = "examples/bench_compare_report.rs"
