[package]
name = "llama-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
link-system = ["ggml-rs/link-system"]

[dependencies]
ggml-rs = { path = "..", package = "ggml-rs", default-features = false }
num-traits = "0.2"
postcard = { version = "1.0", features = ["use-std"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2.0"
uuid = { version = "1", features = ["v5"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }

# --- Basics ---

[[example]]
name = "backend_smoke"
path = "examples/basics/backend_smoke.rs"
required-features = ["link-system"]

[[example]]
name = "simple"
path = "examples/basics/simple.rs"
required-features = ["link-system"]

# --- Benchmarks ---

[[example]]
name = "bench_llama_matmul"
path = "examples/benchmarks/bench_llama_matmul.rs"
required-features = ["link-system"]

[[example]]
name = "bench_mlp_layer"
path = "examples/benchmarks/bench_mlp_layer.rs"
required-features = ["link-system"]

[[example]]
name = "bench_attention_layer"
path = "examples/benchmarks/bench_attention_layer.rs"
required-features = ["link-system"]

[[example]]
name = "bench_attention_decode_cpp_compare"
path = "examples/benchmarks/bench_attention_decode_cpp_compare.rs"
required-features = ["link-system"]

[[example]]
name = "bench_compare_report"
path = "examples/benchmarks/bench_compare_report.rs"

# --- GGUF Utilities ---

[[example]]
name = "gguf_inspect"
path = "examples/gguf/gguf_inspect.rs"
required-features = ["link-system"]

[[example]]
name = "gguf"
path = "examples/gguf/gguf.rs"
required-features = ["link-system"]

[[example]]
name = "gguf_hash"
path = "examples/gguf/gguf_hash.rs"
required-features = ["link-system"]

[[example]]
name = "model_catalog"
path = "examples/gguf/model_catalog.rs"
required-features = ["link-system"]

[[example]]
name = "resolve_tensor_names"
path = "examples/gguf/resolve_tensor_names.rs"
required-features = ["link-system"]

# --- Inference ---

[[example]]
name = "embedding_probe"
path = "examples/inference/embedding_probe.rs"
required-features = ["link-system"]

[[example]]
name = "min_infer_linear"
path = "examples/inference/min_infer_linear.rs"
required-features = ["link-system"]

[[example]]
name = "min_infer_mlp"
path = "examples/inference/min_infer_mlp.rs"
required-features = ["link-system"]

[[example]]
name = "min_infer_mlp_layer"
path = "examples/inference/min_infer_mlp_layer.rs"
required-features = ["link-system"]

[[example]]
name = "min_infer_attention_layer"
path = "examples/inference/min_infer_attention_layer.rs"
required-features = ["link-system"]

[[example]]
name = "e2e_generate_tokens"
path = "examples/inference/e2e_generate_tokens.rs"
required-features = ["link-system"]

[[example]]
name = "e2e_parity_harness"
path = "examples/inference/e2e_parity_harness.rs"
required-features = ["link-system"]

# --- Synthetic Models ---

[[example]]
name = "gpt2_ctx"
path = "examples/models/gpt2_ctx.rs"
required-features = ["link-system"]

[[example]]
name = "gpt2_alloc"
path = "examples/models/gpt2_alloc.rs"
required-features = ["link-system"]

[[example]]
name = "gpt2_backend"
path = "examples/models/gpt2_backend.rs"
required-features = ["link-system"]

[[example]]
name = "gpt2_sched"
path = "examples/models/gpt2_sched.rs"
required-features = ["link-system"]

[[example]]
name = "gpt2_batched"
path = "examples/models/gpt2_batched.rs"
required-features = ["link-system"]

[[example]]
name = "gpt2_quantize"
path = "examples/models/gpt2_quantize.rs"
required-features = ["link-system"]

# --- Applications ---

[[example]]
name = "batched"
path = "examples/applications/batched.rs"
required-features = ["link-system"]

[[example]]
name = "idle"
path = "examples/applications/idle.rs"
required-features = ["link-system"]

[[example]]
name = "save_load_state"
path = "examples/applications/save_load_state.rs"
required-features = ["link-system"]

[[example]]
name = "simple_chat"
path = "examples/applications/simple_chat.rs"
required-features = ["link-system"]
